k8s-ingress-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: webapp
  labels:
    app: web-app
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
