k8s-ingress-webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: webapp
  name: nodejs-app-ingress
spec:
  rules:
    - host: "app.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
